--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
     "vite": "^7.2.2",
     "vue-tsc": "^3.1.3"
   },
-  "packageManager": "pnpm@10.15.0"
+  "packageManager": "pnpm@10.15.0",
+  "volta": {
+    "node": "22.16.0"
+  }
 }
